Update and expand interview docs for 2025
Enhanced sidebar documentation for distributed systems, Java threads, JVM, Redis, and Spring. Added new interview Q&A, technical explanations, diagrams, and real feedback from users. Updated dates and included more practical examples and project references to improve clarity and relevance for upcoming interviews.